alet haline getirildi hata mesajı

--- a/HtmlFiles/register.html
+++ b/HtmlFiles/register.html
@@ -38,10 +38,7 @@
    })
 
    socket.on('hata',(hata)=>{
-    let h1 = document.createElement('h1');
-    console.log(hata);
-    h1.innerHTML=hata;
-    document.appendChild(h1);
+    alert(hata);
    })
 
    socket.on('token',(token)=>{
