--- a/HtmlFiles/Client.html
+++ b/HtmlFiles/Client.html
@@ -1,14 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>client</title>
+    <title>Oda Seçimi</title>
+    <style>
+        body { font-family: Arial, sans-serif; background-color: #f2f2f2; }
+        .room-container {
+            width: 300px; margin: 50px auto; padding: 20px; background-color: #fff; border: 1px solid #ccc;
+        }
+        .room-container h2 { text-align: center; }
+        .room-container ul { list-style-type: none; padding: 0; }
+        .room-container li {
+            padding: 10px; margin: 5px 0; background-color: #e6e6e6; cursor: pointer;
+            text-align: center;
+        }
+        .room-container input {
+            width: 100%; padding: 10px; margin: 10px 0;
+        }
+        .room-container button {
+            width: 100%; padding: 10px; cursor: pointer;
+        }
+    </style>
+   
 </head>
 <body>
-    <ol id="odalarin listesi"></ol>
-    <input type="text" name="" id="oda no">
-    <input type="button" value="odaya katil" id="joinbtn">
+    <div class="room-container">
+        <h2>Oda Seçin</h2>
+        <ul id="odalarin listesi">
+         
+        </ul>
+        <input type="text" id="oda no" placeholder="Oda adı girin">
+        <button id="joinbtn">Odaya Katıl</button>
+    </div>
 </body>
 <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
 <script>
